--- a/qubership-atp-common-logging/pom.xml
+++ b/qubership-atp-common-logging/pom.xml
@@ -2,13 +2,18 @@
     <parent>
         <artifactId>qubership-atp-common-parent-java</artifactId>
         <groupId>org.qubership.atp.common</groupId>
-        <version>0.0.42</version>
+        <version>${revision}</version>
         <relativePath>../qubership-atp-common-parent-java/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>qubership-atp-common-logging</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.qubership.atp.codechecks</groupId>
+            <artifactId>qubership-atp-codechecks</artifactId>
+            <version>${atp.codechecks.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -83,7 +88,10 @@
 
     <profiles>
         <profile>
-            <id>with-analyzers</id>
+            <id>central</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
