--- a/qubership-atp-common-monitoring-undertow/pom.xml
+++ b/qubership-atp-common-monitoring-undertow/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>qubership-atp-common-parent-java</artifactId>
         <groupId>org.qubership.atp.common</groupId>
-        <version>0.0.42</version>
+        <version>${revision}</version>
         <relativePath>../qubership-atp-common-parent-java/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
