super-linter.env is fixed.

--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -5,7 +5,7 @@
 GITLEAKS_LOG_LEVEL=warn
 
 # If set to false, one needs to resolve all clones prior
-VALIDATE_JSCPD=true
+# VALIDATE_JSCPD=false
 
 VALIDATE_KUBERNETES_KUBECONFORM=false
 VALIDATE_MARKDOWN_PRETTIER=false
