--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -4,8 +4,12 @@
 
 GITLEAKS_LOG_LEVEL=warn
 
-# If set to false, one needs to resolve all clones prior
-# VALIDATE_JSCPD=false
+# If set to false, one needs to resolve all clones prior.
+# All clones are fixed by @kagw95 before 21/05/2025.
+# After this moment, this linter reported only clones in:
+# markdown-, yaml-, pom-files, and in imports section (?!) of 3 pairs of java files.
+# I consider them False-Positive, so turn JSCPD off.
+VALIDATE_JSCPD=false
 
 VALIDATE_KUBERNETES_KUBECONFORM=false
 VALIDATE_MARKDOWN_PRETTIER=false
