--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     </developers>
     <scm>
         <connection>scm:git:https//github.com/Netcracker/qubership-testing-platform-common-library.git</connection>
-        <developerConnection>scm:git:https://github.com:Netcracker/qubership-testing-platform-common-library.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/Netcracker/qubership-testing-platform-common-library.git</developerConnection>
         <url>scm:git:https://github.com/Netcracker/qubership-testing-platform-common-library/tree/main</url>
     </scm>
 
