--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
     </modules>
 
     <properties>
-        <revision>0.0.42-SNAPSHOT</revision>
         <java.version>21</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -22,8 +21,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <console.encoding>UTF-8</console.encoding>
-        <spring.boot.version>2.7.18</spring.boot.version>
-        <spring.cloud.version>2021.0.8</spring.cloud.version>
+        <spring.boot.version>3.3.11</spring.boot.version>
+        <spring.cloud.version>2023.0.3</spring.cloud.version>
+        <jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
         <scm.revision>local_build</scm.revision>
     </properties>
 
