--- a/qubership-atp-common-logging/pom.xml
+++ b/qubership-atp-common-logging/pom.xml
@@ -10,6 +10,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
