--- a/qubership-atp-common-probes/pom.xml
+++ b/qubership-atp-common-probes/pom.xml
@@ -37,5 +37,9 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
