build: missed project name is added to child pom.xml files.

--- a/qubership-atp-common-probes/pom.xml
+++ b/qubership-atp-common-probes/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>qubership-atp-common-probes</artifactId>
+    <name>qubership-atp-common-probes</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
