--- a/qubership-atp-common-lock-manager/pom.xml
+++ b/qubership-atp-common-lock-manager/pom.xml
@@ -7,6 +7,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>qubership-atp-common-lock-manager</artifactId>
+    <name>qubership-atp-common-lock-manager</name>
+
     <properties>
         <shedlock.spring>4.12.0</shedlock.spring>
     </properties>
