--- a/qubership-atp-common-logging/pom.xml
+++ b/qubership-atp-common-logging/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>qubership-atp-common-logging</artifactId>
+    <name>qubership-atp-common-logging</name>
 
     <dependencies>
         <dependency>
