--- a/qubership-atp-common-monitoring-undertow/pom.xml
+++ b/qubership-atp-common-monitoring-undertow/pom.xml
@@ -7,8 +7,9 @@
         <relativePath>../qubership-atp-common-parent-java/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>qubership-atp-common-monitoring-undertow</artifactId>
+    <name>qubership-atp-common-monitoring-undertow</name>
+
     <dependencies>
         <dependency>
             <groupId>io.micrometer</groupId>
