--- a/qubership-atp-common-parent-java/pom.xml
+++ b/qubership-atp-common-parent-java/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>qubership-atp-common-parent-java</artifactId>
+    <name>qubership-atp-common-parent-java</name>
     <packaging>pom</packaging>
 
     <properties>
