--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -6,6 +6,8 @@ GITLEAKS_LOG_LEVEL=warn
 
 # VALIDATE_BASH=false
 VALIDATE_BASH_EXEC=false
+VALIDATE_BIOME_FORMAT=false
+VALIDATE_BIOME_LINT=false
 VALIDATE_CHECKOV=false
 VALIDATE_DOCKERFILE_HADOLINT=false
 VALIDATE_GITHUB_ACTIONS=false
