--- a/qubership-atp-common-parent-java/pom.xml
+++ b/qubership-atp-common-parent-java/pom.xml
@@ -13,11 +13,13 @@
         <biz.paluch.logging.version>1.14.1</biz.paluch.logging.version>
         <ch.qos.logback.version>1.2.13</ch.qos.logback.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
+        <commons-fileupload.version>1.6.0</commons-fileupload.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <google.guava.version>32.0.0-jre</google.guava.version>
-        <apache.commons>3.9</apache.commons>
+        <google.guava.version>32.0.1-jre</google.guava.version>
         <openclover.version>4.2.1</openclover.version>
-        <io.undertow.undertow-core.version>2.2.36.Final</io.undertow.undertow-core.version>
+        <io.undertow.undertow-core.version>2.2.38.Final</io.undertow.undertow-core.version>
+        <tomcat.embed.version>9.0.110</tomcat.embed.version>
         <lombok.version>1.18.30</lombok.version>
         <maven.pmd.plugin.version>3.8</maven.pmd.plugin.version>
         <pmd.version>7.0.0</pmd.version>
@@ -76,19 +78,9 @@
                 <version>${google.guava.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${apache.commons}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.openclover</groupId>
-                <artifactId>clover</artifactId>
-                <version>${openclover.version}</version>
+                <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.vintage</groupId>
@@ -120,22 +112,27 @@
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-core</artifactId>
-                <version>9.0.99</version>
+                <version>${tomcat.embed.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-websocket</artifactId>
-                <version>9.0.99</version>
+                <version>${tomcat.embed.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-el</artifactId>
-                <version>9.0.99</version>
+                <version>${tomcat.embed.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${commons-fileupload.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
