--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,7 @@ updates:
       - "/.github/workflows"
     schedule:
       interval: "weekly"
+    # Ignore specific dependencies or versions
+    ignore:
+      - dependency-name: "netcracker/qubership-workflow-hub/.github/workflows/re-maven-snapshot-deploy.yaml"
+        versions: [ "~> 1.0.7" ]
