--- a/qubership-atp-common-monitoring-undertow/pom.xml
+++ b/qubership-atp-common-monitoring-undertow/pom.xml
@@ -9,6 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>qubership-atp-common-monitoring-undertow</artifactId>
+    <name>qubership-atp-common-monitoring-undertow</name>
     <dependencies>
         <dependency>
             <groupId>io.micrometer</groupId>
