--- a/.github/workflows/maven-release-v2.yaml
+++ b/.github/workflows/maven-release-v2.yaml
@@ -123,7 +123,7 @@ jobs:
     outputs:
       dockerfile_exists: ${{ steps.check_dockerfile.outputs.df_exists }}
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: "Check Dockerfile existence"
         id: check_dockerfile
         shell: bash
