--- a/qubership-atp-common-parent-java/pom.xml
+++ b/qubership-atp-common-parent-java/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>qubership-atp-common</artifactId>
         <groupId>org.qubership.atp.common</groupId>
-        <version>0.0.47-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -17,8 +17,10 @@
         <slf4j.version>2.0.16</slf4j.version>
         <google.guava.version>32.0.1-jre</google.guava.version>
         <apache.commons>3.9</apache.commons>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
+        <commons-fileupload.version>1.6.0</commons-fileupload.version>
         <openclover.version>4.2.1</openclover.version>
-        <io.undertow.undertow-core.version>2.3.18.Final</io.undertow.undertow-core.version>
+        <io.undertow.undertow-core.version>2.3.21.Final</io.undertow.undertow-core.version>
         <tomcat.embed.version>9.0.110</tomcat.embed.version>
         <lombok.version>1.18.30</lombok.version>
         <maven.pmd.plugin.version>3.8</maven.pmd.plugin.version>
