--- a/qubership-atp-common-parent-java/pom.xml
+++ b/qubership-atp-common-parent-java/pom.xml
@@ -116,6 +116,11 @@
                 <artifactId>undertow-servlet</artifactId>
                 <version>${io.undertow.undertow-core.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.undertow</groupId>
+                <artifactId>undertow-websockets-jsr</artifactId>
+                <version>${io.undertow.undertow-core.version}</version>
+            </dependency>
             <!-- <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-core</artifactId>
